--- a/blocks/section__welcome-block_gradient/_index.scss
+++ b/blocks/section__welcome-block_gradient/_index.scss
@@ -60,7 +60,7 @@
 
 .welcome-block__caption,
 .welcome-block__caption * {
-    color: var(--color-text-gray);
+    color: var(--color-text-grey);
     color: #fff;
     font-size: var(--font-size-1);
     // font-size: 1.5vw;
