--- a/blocks/experience/_index.scss
+++ b/blocks/experience/_index.scss
@@ -17,7 +17,7 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
 
-    border-top: 1px solid var(--color-text-gray);
+    border-top: 1px solid var(--color-text-grey);
     padding: 3rem 0;
 }
 
@@ -30,7 +30,7 @@
     grid-column: 2/4;
 
     .experience-item:not(:first-child) {
-        border-top: 1px solid var(--color-text-gray);
+        border-top: 1px solid var(--color-text-grey);
         padding: 3rem 0;
     }
 }
@@ -41,7 +41,7 @@
     flex-direction: column;
     width: 100%;
     display: grid;
-    grid-template-columns: 25% 25% 44% ;
+    grid-template-columns: 22.5% 25% 49% ;
     padding-bottom: 3rem;
     gap: 1rem;
 }
@@ -106,7 +106,7 @@
     font-weight: var(--font-weight-regular);
 
     margin-top: .3rem;
-    color: var(--color-text-gray);
+    color: var(--color-text-grey);
 
     // grid-column: 2 / 3;
     // grid-row: 1 / 1;
@@ -117,7 +117,7 @@
 .experience-item__description {
     font-size: var(--font-size-0);
     font-weight: var(--font-weight-regular);
-    color: var(--color-text-gray);
+    color: var(--color-text-grey);
     // margin-top: .4rem;
 }
 
