--- a/blocks/section__first-screen/_index.scss
+++ b/blocks/section__first-screen/_index.scss
@@ -1,62 +1,54 @@
 .section__first-screen {
-    height: fit-content;
-    min-height: 100vh;
+    height: 100vh;
+    max-height: 100vh;
     margin: 0;
     position: relative;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
-    padding-bottom: 0;
-    align-items: flex-end;
-
-
+    align-items: flex-start;
+    gap: 2rem;
+    padding-bottom: 2rem;
 }
 
 .section__first-screen__content {
-    grid-column: 1/12;
     height: fit-content;
     display: flex;
-    flex-direction: row;
-    align-items: flex-end;
+    flex-direction: column;
+    align-items: flex-start;
     gap: 1rem;
-    justify-content: flex-end;
-    height: 100%;
     position: relative;
     z-index: 5;
-    padding-bottom: var(--padding);
 }
 
 
 .first-screen__text,
 .first-screen__text * {
-    // font-size: calc(1.5 * var(--font-size-5));
-    font-size: 11.5vw;
+    font-size: var(--font-size-5);
     line-height: 90%;
-    font-weight: var(--font-weight-regular);
-    font-weight: 600;
-    color: var(--color-primary);
+    font-weight: var(--font-weight-medium);
+    color: var(--color-text-primary);
 }
 
 .first-screen__caption,
 .first-screen__caption * {
-    color: var(--color-text-gray);
-    color: var(--color-primary);
+    color: var(--color-text-grey);
     font-size: var(--font-size-1);
-    // font-size: 1.5vw;
     line-height: 110%;
-    font-weight: 500;
-    margin-bottom: .4vw;
+    font-weight: var(--font-weight-regular);
+    margin-bottom: 0;
 }
 
 .first-screen__image {
-    position: absolute;
     width: 100%;
-    height: 100vh;
-    z-index: 0;
-    // mask: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 20%) add;
+    height: 100%;
+    position: relative;
 }
 
 .first-screen__image__source {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -66,19 +58,18 @@
 
 @media screen and (max-width: 1220px) {}
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {}
 
- 
-}
 @media screen and (max-width: 1024px) {
-    .section__first-screen__content{
+    .section__first-screen__content {
         flex-direction: column;
+        gap: .5rem;
         align-items: flex-start;
     }
 }
 
 @media screen and (max-width: 767px) {
     .section__first-screen {
-        margin-top: -54px;
+        margin-top: -45px;
     }
 }
