--- a/blocks/values/_index.scss
+++ b/blocks/values/_index.scss
@@ -25,7 +25,7 @@
     font-weight: var(--font-weight-regular);
     font-weight: 400;
 
-    // color: var(--color-text-gray);
+    // color: var(--color-text-grey);
 }
 
 .values__description {
