--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -17,7 +17,8 @@
     color: var(--color-primary);
     // color: var(--color-text-primary);
     mix-blend-mode: difference;
-    *{
+
+    * {
         color: var(--color-primary);
         mix-blend-mode: difference;
         // color: var(--color-text-primary);
@@ -72,15 +73,26 @@ header.out {
     align-items: center;
     justify-content: flex-end;
     gap: 3rem;
+    width: fit-content;
+    position: fixed;
+    right: var(--padding);
+    width: 100%;
+    transition: all .3s ease;
+
+    &.out {
+        transform: translateY(-100%);
+
+    }
 }
 
 .header__top__logo {
     text-decoration: none;
-  
+
 
     h1 {
         font-size: var(--font-size-1);
         line-height: 110%;
+        font-weight: var(--font-weight-medium);
     }
 }
 
@@ -131,7 +143,8 @@ header.out {
             color: var(--color-text-primary);
             text-decoration: none;
             font-size: var(--font-size-4);
-            font-weight: var(--font-weight-regular);
+            // font-weight: var(--font-weight-regular);
+            font-weight: var(--font-weight-medium);
             transition: all .1s;
 
             &:hover {
@@ -233,7 +246,7 @@ header.out {
         font-size: var(--font-size-0);
         font-weight: 400;
         text-decoration: none;
-        color: var(--color-text-gray);
+        color: var(--color-text-grey);
 
         // &.active {
         //     color: var(--color-text-primary);
@@ -263,7 +276,7 @@ header.out {
         font-size: var(--font-size-1);
         font-weight: 500;
         text-decoration: none;
-        // color: var(--color-text-gray);
+        // color: var(--color-text-grey);
         // color: #fff;
 
         // &.active {
