--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,22 +8,16 @@
     --font-weight-medium: 500;
     --font-weight-bold: 700;
 
-    // --color-primary: #000;
     --color-primary: #FEFEFE;
-    // --color-primary: #0F0F0F;
     --color-secondary: #999999;
-    --color-gray-dark: #373737;
 
-    --color-text-primary: #060508;
+    --color-black: #060508;
+    --color-text-primary: #37352f;
     --color-text-grey: #8B8B8B;
 
-    --color-background-card: rgba(23, 26, 30, 0.5);
-
-    --color-accent: #F430B9;
+    --color-accent: #308cf4;
     --color-white: #fff;
     --color-link-hover: var(--color-accent);
-
-    --backdrop-filter-card: 700px;
 
     --font-size--2: clamp(0.64rem, 0.7167rem + -0.099vi, 0.6944rem);
     --font-size--1: clamp(0.8rem, 0.847rem + -0.0606vi, 0.8333rem);
@@ -67,8 +61,14 @@
 ::selection {
     background: var(--color-accent);
     /* Цвет фона */
-    color: var(--color-text-primary);
+    color: var(--color-primary);
     /* Цвет текста */
+}
+
+.has-text-24-font-size {
+    a {
+        font-size: var(--wp--preset--font-size--text-24);
+    }
 }
 
 body {}
@@ -87,7 +87,8 @@ body {
 
 
 
-a {
+a,
+a * {
     color: var(--color-text-primary);
     opacity: 1;
     transition: all .3s;
@@ -152,8 +153,18 @@ div {
     }
 }
 
-
-
+:root :where(.is-layout-constrained)>* {
+    margin-block-start: .5rem;
+    margin-block-end: 0;
+}
+.has-grey-color{
+    *{
+        color: var(--color-text-grey);
+    }
+}
+.hidden {
+    display: none;
+}
 
 .grid_12 {
     display: grid;
@@ -499,7 +510,7 @@ body {
 }
 
 .section__title {
-    font-size: var(--font-size-2);
+    font-size: var(--font-size-3);
     line-height: 110%;
     font-weight: var(--font-weight-medium);
     color: var(--color-text-primary);
@@ -539,10 +550,7 @@ body {
 
     section,
     .section,
-    footer {
-        padding-top: 3rem;
-        padding-bottom: 3rem;
-    }
+    footer {}
 
     .section__caption {
         margin-top: .2rem;
@@ -561,8 +569,11 @@ body {
 
 
     #main {
-        margin-top: 54px;
-        // border-top: 1px solid var(--color-gray-dark);
+
+        // margin-top: 54px;
+        section:first-child {
+            padding-top: 3.5rem;
+        }
     }
 
     ._mobile {
