--- a/blocks/section__post-list__big/_index.scss
+++ b/blocks/section__post-list__big/_index.scss
@@ -1,9 +1,10 @@
 .section__post-list__big__wrapper {
     position: relative;
     z-index: 1;
-    // border-top: 1px solid var(--color-gray-dark);
     gap: 0;
-    padding-bottom: 15rem;
+    // padding-bottom: 15rem;
+    padding-bottom: 0;
+    padding-top: 0;
 
     .post-card__big {
         &:not(:first-child) {
@@ -19,7 +20,7 @@
 .section__post-list__big {
     display: flex;
     flex-direction: column;
-    gap: 7rem;
+    gap: 10rem;
 
     grid-column: 3/13;
     grid-row: 2/3;
