--- a/blocks/section__single-post__intro/_index.scss
+++ b/blocks/section__single-post__intro/_index.scss
@@ -8,6 +8,8 @@
 .section__single-post__intro__image {
     width: 100%;
     height: auto;
+    aspect-ratio: 19/9;
+    overflow: hidden;
 }
 
 .section__single-post__intro__image__source {
@@ -19,30 +21,38 @@
 .section__single-post__intro__content {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
-    grid-template-columns: 70% 30%;
-
-    display: grid;
+    gap: 1rem;
 }
-.section__single-post__intro__description__wrapper{
-    display: grid;
+
+.section__single-post__intro__description__wrapper {
+    display: flex;
+    flex-direction: row;
     gap: var(--grid-gap);
+    justify-content: space-between;
 }
 
 
-.section__single-post__intro__text {
-    *{
-        font-size: var(--font-size-5);
-        line-height: 90%;
-        font-weight: var(--font-weight-medium);
-        color: var(--color-text-primary);
-    }
+.section__single-post__intro__title {
+    font-size: var(--font-size-4);
+    font-weight: var(--font-weight-medium);
+    color: var(--color-text-primary);
 }
+
 .section__single-post__intro__description {
-    *{
+    width: 50%;
+
+    * {
         color: var(--color-text-grey);
-        font-size: var(--font-size-2);
+        font-size: var(--font-size-1);
+        font-weight: var(--font-weight-regular);
     }
+}
+
+.section__single-post__meta__wrapper {
+    width: 29rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .section__single-post__meta {
@@ -75,7 +85,7 @@
     opacity: 1;
 
     * {
-        font-size: var(--font-size--1);
+        font-size: var(--font-size-0);
     }
 }
 
@@ -96,7 +106,6 @@
     flex-direction: row;
     gap: 8px;
     position: relative;
-    display: none;
 }
 
 .section__single-post__meta__team__images__wrapper {
@@ -108,9 +117,7 @@
 }
 
 .section__single-post__meta__teaam__imge__source {
-    // border: 3px solid var(--color-primary);
     border: 3px solid var(--color-primary);
-    border: 3px solid #0a0a0a;
     border-radius: 152px;
     padding: 3px;
     width: 28px;
@@ -141,11 +148,11 @@
 }
 
 .section__single-post__meta__team__name {
-    font-size: var(--font-size--1);
+    font-size: var(--font-size-0);
     color: var(--color-secondary);
 
     * {
-        font-size: var(--font-size--1);
+        font-size: var(--font-size-0);
         color: var(--color-secondary);
     }
 
@@ -153,5 +160,29 @@
         &:hover {
             color: var(--color-link-hover);
         }
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .section__single-post__intro__description__wrapper {
+        flex-direction: column;
+    }
+
+    .section__single-post__intro__description {
+        width: 100%;
+    }
+
+    .section__single-post__meta__wrapper {
+        width: 100%;
+    }
+
+    .section__single-post__intro__content {
+        gap: 1rem;
+    }
+}
+
+@media screen and (max-width:782px) {
+    .section__single-post__intro__image{
+        aspect-ratio: 3/4;
     }
 }
