--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -181,7 +181,7 @@
     opacity: 1;
 
     * {
-        font-size: var(--font-size--1);
+        font-size: var(--font-size-0);
     }
 }
 
@@ -251,11 +251,11 @@
 }
 
 .post-card__meta__team__name {
-    font-size: var(--font-size--1);
+    font-size: var(--font-size-0);
     color: var(--color-secondary);
 
     * {
-        font-size: var(--font-size--1);
+        font-size: var(--font-size-0);
         color: var(--color-secondary);
     }
 
@@ -382,15 +382,15 @@
         height: 100%;
         // height: 100%;
         // aspect-ratio: 4 / 3;
-        top: -4rem;
-        
+        // top: -4rem;
+
         &:hover {
             opacity: 1;
         }
-        
+
         &._cover {
             position: relative;
-            top: 0;
+            // top: 0;
 
             &._cover {
                 // mask: linear-gradient(260deg, rgba(0, 0, 0, 0) 10.41138795045045%, rgba(0, 0, 0, 1) 93.1447072072072%) add;
@@ -423,14 +423,13 @@
     }
 
     .f-thumbs {
-        position: absolute;
-        // right: 2.1rem;
-        left: var(--padding);
-        // top: .6rem;
-        bottom: var(--padding);
-        bottom: 1.2rem;
-        width: fit-content;
+        // position: absolute;
+        // left: var(--padding);
+        // bottom: var(--padding);
+        // bottom: 1.2rem;
+        // width: fit-content;
         width: 100%;
+        margin-top: 1rem;
 
         &.is-vertical {
             .f-thumbs__viewport {
@@ -462,7 +461,9 @@
         .f-thumbs__slide {
             width: fit-content;
             max-width: 60px;
-            height: fit-content;
+            // height: fit-content;
+            align-items: flex-start;
+
         }
 
         .f-thumbs__slide__button {
@@ -497,8 +498,8 @@
 
     .post-card__big__gallery__img__source {
         object-fit: contain;
-        width: 70%;
-        height: 70%;
+        width: 100%;
+        height: 100%;
         margin: auto;
         // object-fit: cover;
 
@@ -518,43 +519,43 @@
 
 // @media screen and (max-width: 1220px) {
 @media screen and (max-width: 1024px) {
-    .post-card__big__heading {
-        font-size: var(--font-size-1);
+    .post-card__big {
+        flex-direction: column;
     }
 
-    .post-card__big__title {
-        grid-column: 1/4;
-        grid-row: 1/2;
+    .post-card__big__gallery {
+        width: 100%;
     }
 
-    .post-card__big__short-description {
-        * {
-            font-size: var(--font-size--1);
+    .post-card__big__content__wrapper {
+        width: 100%;
+    }
+
+    .post-card__big__heading {}
+
+    .post-card__big__title {}
+
+    .post-card__big__short-description {}
+
+    .post-card__big__gallery {
+        .f-thumbs {
+            left: 1rem;
+            bottom: 1rem;
+            width: calc(100% - var(--padding));
+
+            .f-thumbs__slide {
+                max-width: 50px;
+            }
         }
 
-        grid-column: 1/4;
-        grid-row: 1/2;
-    }
+        .f-carousel__slide {
+            top: 0;
+        }
 
-    .post-card__big__meta__item {
-        justify-content: flex-start;
-        justify-content: flex-end;
-        width: fit-content;
-        padding: 0.15rem 0px;
-    }
-
-    .post-card__big__meta {
-        align-items: flex-start;
-        justify-content: flex-start;
-        align-items: flex-end;
-        justify-content: flex-end;
-        width: 100%;
-        grid-row: 2 / 3;
-        grid-column: 1 / 4;
-        text-align: left;
-        text-align: right;
-
-        margin-bottom: 5.5rem;
+        .post-card__big__gallery__img__source {
+            width: 85%;
+            height: 85%;
+        }
     }
 }
 
