--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,8 +16,16 @@
     --color-text-grey: #8B8B8B;
 
     --color-accent: #308cf4;
-    --color-white: #fff;
     --color-link-hover: var(--color-accent);
+
+    --color-white: #fff;
+    --color-red: #d60427;
+    --color-green: #037b0f;
+    --color-blue: #1d04d6;
+    --color-yellow: #f7e30d;
+    --color-purple: #d32ddb;
+
+
 
     --font-size--2: clamp(0.64rem, 0.7167rem + -0.099vi, 0.6944rem);
     --font-size--1: clamp(0.8rem, 0.847rem + -0.0606vi, 0.8333rem);
@@ -28,6 +36,14 @@
     --font-size-4: clamp(2.0736rem, 1.9231rem + 0.6687vi, 2.4414rem);
     --font-size-5: clamp(2.4883rem, 2.2578rem + 1.0244vi, 3.0518rem);
 
+    // --font-size--2: clamp(0.6076rem, 0.5939rem + 0.0595vw, 0.64rem);
+    // --font-size--1: clamp(0.7292rem, 0.699rem + 0.1303vw, 0.8rem);
+    // --font-size-0: clamp(0.875rem, 0.8218rem + 0.2299vw, 1rem);
+    // --font-size-1: clamp(1.05rem, 0.9649rem + 0.3678vw, 1.25rem);
+    // --font-size-2: clamp(1.26rem, 1.1314rem + 0.5563vw, 1.5625rem);
+    // --font-size-3: clamp(1.512rem, 1.3244rem + 0.8113vw, 1.9531rem);
+    // --font-size-4: clamp(1.8144rem, 1.5477rem + 1.1531vw, 2.4414rem);
+    // --font-size-5: clamp(2.1773rem, 1.8054rem + 1.6082vw, 3.0518rem);
 
     --grid-gap: 1.88rem;
     --grid-column-gap: 30px;
@@ -47,6 +63,10 @@
     @media screen and (max-width: 767px) {
         --grid-gap: 20px;
     }
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 * {
@@ -142,7 +162,7 @@ a,
 li {
     font-weight: 400;
     font-size: var(--font-size-0);
-    line-height: 115%;
+    line-height: 117%;
 }
 
 div {
@@ -157,13 +177,15 @@ div {
     margin-block-start: .5rem;
     margin-block-end: 0;
 }
-.has-grey-color{
-    *{
+
+.has-grey-color {
+    * {
         color: var(--color-text-grey);
     }
 }
+
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 .grid_12 {
@@ -356,8 +378,8 @@ footer,
 
     &._open {
         // transform: scale(.9);
-        opacity: .7;
-
+        // opacity: .9;
+        // filter: grayscale(1);
         filter: blur(5px);
         touch-action: none;
 
@@ -368,21 +390,21 @@ footer,
     }
 }
 
-body {
-    .experience-block:nth-child(n+2) {
-        padding-top: 0;
-    }
+// body {
+//     .experience-block:nth-child(n+2) {
+//         padding-top: 0;
+//     }
 
-    .experience-block:not(:first-child):not(:last-child) {
-        padding-bottom: 0;
-        padding-top: 7rem;
+//     .experience-block:not(:first-child):not(:last-child) {
+//         padding-bottom: 0;
+//         padding-top: 7rem;
 
-        .experience-list__wrapper {
-            padding-bottom: 0;
-        }
-    }
+//         .experience-list__wrapper {
+//             padding-bottom: 0;
+//         }
+//     }
 
-}
+// }
 
 // Buttons
 .link-button {
@@ -518,12 +540,8 @@ body {
 }
 
 .section__caption {
-    font-size: var(--font-size-0);
-    line-height: 110%;
-    font-weight: var(--font-weight-regular);
     // font-weight: 500;
     color: var(--color-text-grey);
-
     margin-top: .5rem;
 }
 
