--- a/blocks/experience/_index.scss
+++ b/blocks/experience/_index.scss
@@ -18,7 +18,7 @@
     gap: 2rem;
 
     border-top: 1px solid var(--color-text-grey);
-    padding: 3rem 0;
+    padding: 3rem 0 0 0;
 }
 
 .experience-list__name {
