--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300,400;500;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300,400;500;700&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
     --font-family-primary: 'Roboto', sans-serif;
@@ -69,6 +70,10 @@ html {
     scroll-behavior: smooth;
 }
 
+em {
+    font-style: italic !important;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -108,7 +113,8 @@ body {
 
 
 a,
-a * {
+a *,
+.link {
     color: var(--color-text-primary);
     opacity: 1;
     transition: all .3s;
@@ -169,6 +175,7 @@ div {
     p {
         &:not(:first-child) {
             margin-top: .5rem;
+            min-height: var(--font-size--1);
         }
     }
 }
@@ -178,6 +185,9 @@ div {
     margin-block-end: 0;
 }
 
+// .wp-block-heading{
+//     margin-top: var(--wp--preset--spacing--30);
+// }
 .has-grey-color {
     * {
         color: var(--color-text-grey);
@@ -392,8 +402,8 @@ footer,
         }
     }
 
-    section{
-        &:first-child{
+    section {
+        &:first-child {
             padding-top: 0;
         }
     }
@@ -415,107 +425,7 @@ footer,
 
 // }
 
-// Buttons
-.link-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
 
-    // border-radius: 0.6rem;
-    padding: 1rem 1.5rem;
-    background: var(--color-background-card);
-    background: #ffffff1a;
-
-
-    text-decoration: none;
-
-    width: fit-content;
-
-
-    // background-color: rgba(255, 255, 255, 0.1);
-    // background-image: linear-gradient(rgb(255, 255, 255) 5vw, transparent 5vw, transparent 15vw, rgb(255, 254, 254) 15vw),
-    //     linear-gradient(90deg, rgb(255, 255, 255) 5vw, transparent 5vw, transparent 15vw, rgb(255, 255, 255) 15vw),
-    //     linear-gradient(rgb(255, 255, 255) 5vw, transparent 5vw, transparent 15vw, rgb(255, 255, 255) 15vw),
-    //     linear-gradient(90deg, rgb(255, 255, 255) 5vw, transparent 5vw, transparent 15vw, rgb(255, 255, 255) 15vw);
-    // background-size: 1px 20vw, 20vw 1px, 1px 20vw, 20vw 1px;
-    // background-position: 0 0, 0 0, 100% 100%, 100% 100%;
-    // background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
-
-    position: relative;
-    z-index: 1;
-
-    &._border {
-
-        &::before {
-            display: block;
-            content: '';
-            position: absolute;
-            border: 1px solid #fff;
-            border-right-color: transparent;
-            border-bottom-color: transparent;
-            width: 1rem;
-            height: 1rem;
-            top: 0;
-            left: 0;
-            z-index: 2;
-        }
-
-        // &::after {
-        //     display: block;
-        //     content: '';
-        //     position: absolute;
-        //     border: 1px solid #fff;
-        //     border-left-color: transparent;
-        //     border-bottom-color: transparent;
-        //     width: 1rem;
-        //     height: 1rem;
-        //     top: 0;
-        //     right: 0;
-        //     z-index: 2;
-        // }
-
-        .link-button__border {
-            // &::before {
-            //     display: block;
-            //     content: '';
-            //     position: absolute;
-            //     border: 1px solid #fff;
-            //     border-right-color: transparent;
-            //     border-top-color: transparent;
-            //     width: 1rem;
-            //     height: 1rem;
-            //     bottom: 0;
-            //     left: 0;
-            //     z-index: 2;
-            // }
-
-            &::after {
-                display: block;
-                content: '';
-                position: absolute;
-                border: 1px solid var(--color-text-primary);
-                border-left-color: transparent;
-                border-top-color: transparent;
-                width: 1rem;
-                height: 1rem;
-                bottom: 0;
-                right: 0;
-                z-index: 2;
-            }
-        }
-    }
-
-    &._big {
-        padding: 1.1rem 0.62rem;
-        // border-radius: .3rem;
-    }
-
-    &:hover {
-        color: var(--color-text-primary);
-        background: #c8d0db4c;
-    }
-}
 
 ._mobile {
     display: none;
@@ -554,19 +464,110 @@ footer,
     margin-top: .5rem;
 }
 
-@media screen and (max-width: 1600px) {
-    #main {
-        grid-column: 4/13;
-    }
-
+.post-password__page {
+    width: 100%;
+    height: 64vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-@media screen and (max-width: 1220px) {
-    #main {
-        grid-column: 5/13;
-        padding: 0;
+.post-password-form {
+    max-width: 330px;
+    width: 330px;
+    height: fit-content;
+    padding: var(--padding) 0;
+    margin: 0 auto;
+    // text-align: center;
+}
+
+// Buttons
+.link-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    border: none;
+    // border-radius: 0.6rem;
+    padding: 1rem 1.5rem;
+    text-decoration: none;
+
+    width: fit-content;
+
+
+    position: relative;
+    z-index: 1;
+
+    transition: all .5s;
+
+    cursor: pointer;
+
+    &_blue {
+        background-color: var(--color-accent);
+        color: var(--color-white);
+        font-size: var(--font-size-0);
     }
 
+
+    &._border {
+
+        &::before {
+            display: block;
+            content: '';
+            position: absolute;
+            border: 1px solid #fff;
+            border-right-color: transparent;
+            border-bottom-color: transparent;
+            width: 1rem;
+            height: 1rem;
+            top: 0;
+            left: 0;
+            z-index: 2;
+        }
+    }
+
+    &._big {
+        padding: 1.1rem 0.62rem;
+        // border-radius: .3rem;
+    }
+
+    &:hover {
+        opacity: .8;
+    }
+}
+
+.post-password__input {
+    padding: 1rem;
+    font-size: var(--font-size-0);
+    color: #8B8B8B;
+    color: var(--color-text-grey);
+    border: none;
+    background-color: #f2f2f2;
+    margin-top: 2rem;
+    // border-radius: .2rem;
+    width: 100%;
+
+    &::placeholder {
+        font-size: var(--font-size-0);
+        color: var(--color-text-grey);
+    }
+}
+
+.post-password__caption {
+    color: var(--color-text-grey);
+}
+
+.post-password__submit {
+    margin-top: 1rem;
+    width: 100%;
+    text-align: center;
+}
+
+
+@media screen and (max-width: 1600px) {}
+
+@media screen and (max-width: 1220px) {
     .main-padding {
         padding-left: var(--padding);
         padding-right: var(--padding);
@@ -599,7 +600,7 @@ footer,
 
         // margin-top: 54px;
         section:first-child {
-            padding-top: 3.5rem;
+            // padding-top: 3.5rem;
         }
     }
 
@@ -614,7 +615,13 @@ footer,
     }
 }
 
-@media screen and (max-width: 480px) {}
+@media screen and (max-width: 480px) {
+
+    .post-password-form {
+        max-width: 100%;
+        width: 100%;
+    }
+}
 
 // Single page
 .single-page {
