--- a/blocks/section__single-post__meta/_index.scss
+++ b/blocks/section__single-post__meta/_index.scss
@@ -1,61 +1,3 @@
-.section__single-post__intro {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: var(--grid-gap);
-    padding-bottom: 0;
-    padding-top: 0;
-}
-
-.section__single-post__intro__image {
-    width: 100%;
-    height: auto;
-    aspect-ratio: 19/9;
-    overflow: hidden;
-}
-
-.section__single-post__intro__image__source {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.section__single-post__intro__content {
-    // display: grid;
-    // flex-direction: row;
-    // grid-template-columns: 50% 40%;
-    gap: 1rem;
-
-    display: flex;
-    flex-direction: column;
-}
-
-.section__single-post__intro__description__wrapper {
-    display: flex;
-    flex-direction: column;
-    // gap: var(--grid-gap);
-    gap: 1rem;
-    max-width: 30%;
-    // justify-content: space-between;
-}
-
-
-.section__single-post__intro__title {
-    font-size: var(--font-size-2);
-    font-weight: var(--font-weight-medium);
-    color: var(--color-text-primary);
-}
-
-.section__single-post__intro__description {
-    // width: 50%;
-
-    * {
-        color: var(--color-text-grey);
-        font-size: var(--font-size-0);
-        font-weight: var(--font-weight-regular);
-    }
-}
-
 .section__single-post__meta__wrapper {
     width: 100%;
     display: flex;
@@ -173,6 +115,9 @@
 }
 
 @media screen and (max-width: 1024px) {
+    .section__single-post__meta__item__variable, .section__single-post__meta__item__value{
+        width: 100%;
+    }
     .section__single-post__intro__description__wrapper {
         flex-direction: column;
     }
@@ -188,12 +133,20 @@
     .section__single-post__intro__content {
         gap: .5rem;
     }
+
+    .section__single-post__meta__item,
+    .section__single-post__meta__team {
+        flex-direction: column;
+        gap: 3px;
+        align-items: flex-start;
+    }
 }
 
 @media screen and (max-width:780px) {
-    .section__single-post__intro__image{
+    .section__single-post__intro__image {
         aspect-ratio: 3/4;
     }
+
     .section__single-post__intro__description__wrapper {
         max-width: 36rem;
     }
