--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -9,6 +9,7 @@
     flex-direction: row-reverse;
     flex-direction: row;
     gap: 2rem;
+
 }
 
 
@@ -21,7 +22,9 @@
     // pointer-events: none;
     // width: 100%;
 
-
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
     width: 30%;
 }
 
@@ -60,20 +63,14 @@
     justify-content: flex-start;
     flex-direction: column;
     gap: 10px;
-
-    grid-column: 1/2;
-    grid-row: 1/2;
 }
 
 .post-card__big__heading {
     // font-weight: 600;
-    font-size: var(--font-size-2);
+    font-size: var(--font-size-1);
     font-weight: var(--font-weight-medium);
-    line-height: var(--font-size-2);
+    line-height: var(--font-size-1);
     z-index: 10;
-
-    grid-column: 1/2;
-    grid-row: 1/1;
 
     color: var(--color-text-primary);
 
@@ -87,7 +84,7 @@
     // grid-row: 1/2;
     // color: var(--color-primary);
     // margin-top: 2rem;
-    margin-top: -.5rem;
+    margin-top: -1rem;
 
     * {
         color: var(--color-text-grey);
@@ -268,9 +265,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-
-
-    display: none;
+    // display: none;
 
     a {
         width: 100%;
