use template for post

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -563,9 +563,9 @@ footer,
     text-align: center;
 }
 
-.single-post{
-    padding: 0 var(--padding);
-}
+// .single-post{
+//     padding: 0 var(--padding);
+// }
 @media screen and (max-width: 1600px) {}
 
 @media screen and (max-width: 1220px) {
