--- a/blocks/post__navigation/_index.scss
+++ b/blocks/post__navigation/_index.scss
@@ -1,6 +1,6 @@
 .post__navigation {
     padding: 1.5rem var(--padding);
-    position: sticky;
+    position: fixed;
     left: var(--padding);
     top: 64px;
     bottom: 0;
