--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -2,18 +2,13 @@
     transition-property: all;
     transition-duration: .5s;
     position: relative;
-    // height: 100vh;
-    background-color: var(--color-black);
-    margin-top: 5rem;
 
     &._hide {
-        transform: translateY(-30%) scale(0.9);
+        // transform: translateY(-30%) scale(0.9);
         filter: blur(5px);
         opacity: .7;
         touch-action: none;
     }
-
-
 }
 
 .footer__bottom {
@@ -32,12 +27,6 @@
 
     li {
         list-style: none;
-    }
-
-    a {
-        text-decoration: none;
-        color: var(--color-white);
-        width: fit-content;
     }
 }
 
@@ -61,33 +50,25 @@
     position: relative;
     height: 100%;
     justify-content: space-between;
-
-    &::after {
-        content: '';
-        position: absolute;
-        display: inline-block;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 80%;
-        background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
-        z-index: 10;
-    }
 }
 
 .footer__links__wrapper {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     z-index: 15;
+    gap: 2rem;
 }
 
 .footer__links {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 1rem;
-    grid-row: 1/2;
+    row-gap: .7rem;
+    grid-row: 1 / 2;
+    width: -moz-fit-content;
     width: fit-content;
+    flex-wrap: wrap;
 
     li {
         list-style: none;
@@ -95,8 +76,8 @@
 
     * {
         text-decoration: none;
-        font-size: var(--font-size-1);
-        color: var(--color-white);
+        font-size: var(--font-size-0);
+        // color: var(--color-white);
     }
 
     &:nth-child(2) {
@@ -105,19 +86,7 @@
 }
 
 #menu-footer_second {
-    align-items: flex-end;
-}
-
-.footer__decor {
-    width: 100%;
-    grid-row: 2/3;
-    z-index: 5;
-
-    svg {
-        width: 100%;
-        height: auto;
-        fill: #fff, linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(6, 6, 6, 0.5) 22.78%, #0d0d0d 84.29%);
-    }
+    align-items: flex-start;
 }
 
 
