--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -375,7 +375,7 @@
         // height: 100%;
         // aspect-ratio: 4 / 3;
         // top: -4rem;
-
+        border: none;
         &:hover {
             opacity: 1;
         }
