--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,6 +46,15 @@
     // --font-size-4: clamp(1.8144rem, 1.5477rem + 1.1531vw, 2.4414rem);
     // --font-size-5: clamp(2.1773rem, 1.8054rem + 1.6082vw, 3.0518rem);
 
+    --font-size--2: clamp(0.6944rem, 0.6871rem + 0.0365vw, 0.72rem);
+    --font-size--1: clamp(0.8333rem, 0.8143rem + 0.0952vw, 0.9rem);
+    --font-size-0: clamp(1rem, 0.9643rem + 0.1786vw, 1.125rem);
+    --font-size-1: clamp(1.2rem, 1.1411rem + 0.2946vw, 1.4063rem);
+    --font-size-2: clamp(1.44rem, 1.3492rem + 0.454vw, 1.7578rem);
+    --font-size-3: clamp(1.728rem, 1.5939rem + 0.6704vw, 2.1973rem);
+    --font-size-4: clamp(2.0736rem, 1.8813rem + 0.9614vw, 2.7466rem);
+    --font-size-5: clamp(2.4883rem, 2.2183rem + 1.3499vw, 3.4332rem);
+
     --grid-gap: 1.88rem;
     --grid-column-gap: 30px;
     --grid-row-gap: 30px;
@@ -113,16 +122,31 @@ body {
 
 
 a,
-a *,
+// a *,
 .link {
     color: var(--color-text-primary);
     opacity: 1;
     transition: all .3s;
 
+    width: fit-content;
+    text-decoration: none;
+    // border-bottom: 1px solid currentColor;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+
     &:hover {
         // opacity: .8;
         color: var(--color-link-hover);
+
+        * {
+            color: var(--color-link-hover);
+
+        }
     }
+}
+
+.dashicons,
+.dashicons-before:before {
+    border: none;
 }
 
 h1,
@@ -171,13 +195,6 @@ li {
     line-height: 117%;
 }
 
-a {
-    width: fit-content;
-    text-decoration: none;
-    // color: #333;
-    // border-bottom: 1px solid currentColor;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
-}
 
 div {
     p {
@@ -643,6 +660,10 @@ footer,
     // background-color: var(--color-primary);
     // margin-left: 15rem;
     width: calc(100% - 180px - 12rem);
+}
+
+.single .wp-block-post-title .dashicons {
+    display: none;
 }
 
 @media screen and (max-width: 1600px) {
